[gd_scene load_steps=8 format=3 uid="uid://c1b8ixx42r41l"]

[ext_resource type="Script" uid="uid://cmn666qjvkafu" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Resource" uid="uid://o24jfbmgvyr2" path="res://test_inv.tres" id="2_2hs0m"]
[ext_resource type="Texture2D" uid="uid://cydq8bgbc4n0v" path="res://Assets/main_charakter2.png" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://5jtymv3t4kub" path="res://Assets/main_charakter3.png" id="3_2hs0m"]
[ext_resource type="Texture2D" uid="uid://ndqnta07018b" path="res://Assets/main_charakter4.png" id="4_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bdj7esu82impv" path="res://Assets/main_charakter1.png" id="5_dw050"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
height = 42.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_onrkg")
inventory_data = ExtResource("2_2hs0m")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="MainCharakterLeft" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("2_sweqy")

[node name="MainCharakterRight" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_2hs0m")

[node name="MainCharakterBack" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("4_1jxqw")

[node name="MainCharakterFront" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("5_dw050")
